src/test/ui/pattern/usefulness/issue-72377.stderr
error[E0004]: non-exhaustive patterns: `(A, Some(A))`, `(A, Some(B))`, `(B, Some(B))` and 2 more not covered
  --> $DIR/issue-72377.rs:8:11
   |
LL |     match (x, y) {
   |           ^^^^^^ patterns `(A, Some(A))`, `(A, Some(B))`, `(B, Some(B))` and 2 more not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(X, Option<X>)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
